@@ -8,6 +8,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ## [Unreleased]
 ### Fixed
 - [API_PARSER] Regularly scan processes to join to avoid accumulating zombies
+- [CONFIG] [PF] Update PF configurations when whitelist/blacklist entries are changed on GUI
 ### Changed
 - [LOGGING] [PF] Don't send PF logs to mongodb anymore, log to /var/log/pf/parsed.log instead
 - [PKG_UPGRADE] Better filtering of update scripts' folders during upgrades
